compiler/tests/run-pass/type-definitions.arret
(import [stdlib base])

; Make sure _ eats the type
(deftype _ Int)
(deftype _ Float)

(defn takes-int ([x Int])
  (lettype [Integer Int]
    (ann x Integer)))

(defn main! ())