compiler/tests/compile-error/rem-by-zero.arret
(import [stdlib base])

(def _ (rem 1 0))
      ;^^^^^^^^^ ERROR division by zero

(defn main! () ->! ())